--- a/Z I101/I-101DataDescription.html
+++ b/Z I101/I-101DataDescription.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row borderSolid" id="navBox">
         <div class="col">
-          <a href="I-101Homepage.html">
+          <a href="index.html">
             <h3 class="navButton bgBlue borderSolid textBlack">
               Home<br />
               Page
