--- a/Z I101/I-101DataVis.html
+++ b/Z I101/I-101DataVis.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row borderSolid" id="navBox">
         <div class="col">
-          <a href="I-101Homepage.html">
+          <a href="index.html">
             <h3 class="navButton bgBlue borderSolid textBlack">
               Home<br />
               Page
@@ -76,11 +76,13 @@
           <canvas class="borderSolid" id="hourChartL"></canvas>
           <canvas class="borderSolid" id="raceChartL"></canvas>
           <canvas class="borderSolid" id="ageChartL"></canvas>
+          <p>charts made using chart.js</p>
         </div>
         <div class="col-6">
           <canvas class="borderSolid" id="hourChartR"></canvas>
           <canvas class="borderSolid" id="raceChartR"></canvas>
           <canvas class="borderSolid" id="ageChartR"></canvas>
+          <p>charts made using chart.js</p>
         </div>
       </div>
       <br />
@@ -126,6 +128,12 @@
       </div>
       <br />
       <!--Graph Selector-->
+
+      <div class="row">
+        <div class="col">
+          <h4 class="centerDiv">Highlight your data using these dropdowns</h4>
+        </div>
+      </div>
 
       <div class="row">
         <div class="col-3">
