--- a/Z I101/I-101Race.html
+++ b/Z I101/I-101Race.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row borderSolid" id="navBox">
         <div class="col">
-          <a href="I-101Homepage.html">
+          <a href="index.html">
             <h3 class="navButton bgBlue borderSolid textBlack">
               Home<br />
               Page
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
-          <canvas class="chart borderSolid" id="raceChart"></canvas>
+          <canvas class="chart borderSolid" id="raceChartR"></canvas>
         </div>
       </div>
       <br />
@@ -86,14 +86,12 @@
             categories: White, Black, Hispanic, and Asian. White students make
             up the largest proportion of the student population, at 44.1%,
             followed by Hispanic students, who account for 39.0%. The percentage
-            of Black students is 36.6%, while Asian students represent the
-            smallest group, with 31.1% of the population. The chart provides a
-            clear visual comparison of these racial groups, with each category
-            represented by a differently colored bar—light teal for White,
-            purple for Black, orange for Hispanic, and red for Asian. Overall,
-            the chart shows that White students constitute the largest share of
-            the student population, followed by Hispanic, Black, and Asian
-            students.
+            of Black students is 36.6%, while Asian students represent 31.1% of
+            the population. <br /><br />This is important for future students
+            who are curious about the race population as well as representation
+            in their respected population. Hopefully this shows that no matter
+            the race, anyone can study and work. Hopefully, this encourages them
+            to register for that class or apply for a job if unsure.
           </p>
         </div>
       </div>
