--- a/Z I101/I-10AgeRange.html
+++ b/Z I101/I-10AgeRange.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row borderSolid" id="navBox">
         <div class="col">
-          <a href="I-101Homepage.html">
+          <a href="index.html">
             <h3 class="navButton bgBlue borderSolid textBlack">
               Home<br />
               Page
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
-          <canvas class="chart borderSolid" id="ageChart"></canvas>
+          <canvas class="chart borderSolid" id="ageChartL"></canvas>
         </div>
       </div>
       <br />
@@ -84,18 +84,15 @@
             This bar chart illustrates the percentage of students employed
             across different age ranges. The data shows that 39.9% of students
             in the 16-24 age group are employed, the lowest of the four groups.
-            The employment rate increases to 47.0% for students aged 25-29,
-            making this the highest employment rate among the age ranges. In the
-            30-39 age group, 45.4% of students are employed, which is slightly
-            lower than the 25-29 group but still a significant proportion. The
-            40-49 age group has an employment rate of 43.6%, which is just below
-            the 30-39 group. Overall, the employment rates for students in these
-            age ranges fall within a narrow band of 39% to 47%, suggesting a
-            relatively stable trend in student employment across these groups.
-            The chart highlights that while employment rates tend to be highest
-            for students aged 25-29, there is no dramatic drop-off in employment
-            as students get older, with all age groups showing notable
-            employment levels.
+            In the 30-39 age group, 45.4% of students are employed, which is
+            slightly lower than the 25-29 group but still a significant
+            proportion. The 40-49 age group has an employment rate of 43.6%.
+            <br />
+            <br />This is important because it shows our website users that as
+            they become older and try to go back to school it’s very common for
+            them to have to work, so they will feel a little better about trying
+            to go back to school and work on top of that knowing that there are
+            a good amount of college students doing the same.
           </p>
         </div>
       </div>
