--- a/Z I101/Website/AboutUsPage.html
+++ b/Z I101/Website/AboutUsPage.html
@@ -16,68 +16,80 @@
   <body>
     <div class="container">
       <div class="row bgBlue borderSolid header">
-        <div class="col-"></div>
         <div class="col">
-          <h1>College Student Employment</h1>
+          <h1 class="centerDiv">College Student Employment</h1>
         </div>
       </div>
     </div>
-
     <div class="container">
       <div class="row borderSolid" id="navBox">
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Home<br />
-            Page
-          </h3>
+          <a href="index.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Home<br />
+              Page
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Data<br />
-            Visualization
-          </h3>
+          <a href="I-101DataVis.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Data<br />
+              Visualization
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Data<br />
-            Description
-          </h3>
+          <a href="I-101DataDescription.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Data<br />
+              Description
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            About<br />
-            Us
-          </h3>
+          <a href="AboutUsPage.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              About<br />
+              Us
+            </h3></a
+          >
         </div>
       </div>
     </div>
-    <h1 class="header2">About Us!</h1>
     <br />
+    <!-- Header Above -->
 
     <div class="container">
       <div class="row">
         <div class="col-5 img">
           <h3 class="centertext">Jonathan Nguyen</h3>
-          <img
-            src="user-profile-icon-free-vector.jpg"
-            width="500"
-            height="500"
-            alt=""
-          />
-          <p>Bio and role.</p>
+          <img src="20220506_133527.jpg" width="500" height="500" alt="" />
+          <p class="centerDiv">
+            I am a student at IUI looking to get my BA in Informatics. I felt
+            like this topic was interesting due to my own circumstances, as well
+            as our school's reputation as a college for working adults. I have a
+            little bit less time than I used to, but I used to really enjoy VR
+            gaming.
+            <br />
+            <br />
+          </p>
         </div>
         <div class="col">
           <br />
         </div>
         <div class="col-5 img">
           <h3 class="centertext">Nicholas Weatherspoon</h3>
-          <img
-            src="user-profile-icon-free-vector.jpg"
-            width="500"
-            height="500"
-            alt=""
-          />
-          <p>Bio and role.</p>
+          <img src="nick.jpg" width="500" height="500" alt="" />
+          <p class="centerDiv">
+            I’m currently a Sophomore at IUI looking to get my BA in Computer
+            Science with a minor in Informatics. I enjoy many things outside of
+            school including breeding tropical fish, playing/watching football
+            as well as spending time with my family.
+            <br />
+            <br />
+            Creation of Data Visualization and Coding Implementation
+          </p>
         </div>
       </div>
       <div class="col">
@@ -86,13 +98,16 @@
       <div class="row">
         <div class="col-5 img">
           <h3 class="centertext">Maddie Curtis</h3>
-          <img
-            src="user-profile-icon-free-vector.jpg"
-            width="500"
-            height="500"
-            alt=""
-          />
-          <p>Bio and role.</p>
+          <img src="maggie.jpg" width="500" height="500" alt="" />
+          <p class="centerDiv">
+            I’m a student at Herron School of Art and Design! I’m studying
+            Drawing and Illustration, so my skills lean more into the art side
+            of things. I enjoy playing video games in my free time, notably
+            Xenoblade Chronicles or Final Fantasy.
+            <br />
+            <br />
+            Artistic direction and description text
+          </p>
         </div>
         <div class="col">
           <br />
@@ -100,13 +115,15 @@
 
         <div class="col-5 img">
           <h3 class="centertext">Leo Cortes</h3>
-          <img
-            src="user-profile-icon-free-vector.jpg"
-            width="500"
-            height="500"
-            alt=""
-          />
-          <p>Bio and role.</p>
+          <img src="leo.jpg" width="500" height="500" alt="" />
+          <p class="centerDiv">
+            I am a student within the Luddy school of informatics! I am studying
+            computer science, so my skills lean more towards the coding side of
+            computers. I wanna specialize in cybersecurity and I enjoy playing
+            games and being with my cats. <br />
+            <br />
+            Media Sharer and collaborative insight
+          </p>
         </div>
       </div>
       <div class="col">
@@ -118,13 +135,16 @@
         <div class="col-4"></div>
         <div class="col-5 img">
           <h3 class="centertext">Marlene Rodriguez</h3>
-          <img
-            src="user-profile-icon-free-vector.jpg"
-            width="500"
-            heigth="500"
-            alt=""
-          />
-          <p>Bio and role</p>
+          <img src="unnamed.jpg" width="500" heigth="500" alt="" />
+          <p class="centerDiv">
+            I am a Luddy School of Informatics student at IUI. I am currently a
+            junior majoring in Informatics with a specialization in business.
+            I’m working full-time as a hostler driver at an Amazon fulfillment
+            center. In my free time, I enjoy going for walks in the park and
+            playing soccer. <br />
+            <br />
+            Usability Tester and image implementation
+          </p>
         </div>
         <div class="col"></div>
       </div>
