--- a/Z I101/Website/I-101HoursWorked.html
+++ b/Z I101/Website/I-101HoursWorked.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>HomePage</title>
+    <title>Hours Worked</title>
     <link
       id="video"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -25,28 +25,36 @@
     <div class="container">
       <div class="row borderSolid" id="navBox">
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Home<br />
-            Page
-          </h3>
+          <a href="index.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Home<br />
+              Page
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Data<br />
-            Visualization
-          </h3>
+          <a href="I-101DataVis.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Data<br />
+              Visualization
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Data<br />
-            Description
-          </h3>
+          <a href="I-101DataDescription.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Data<br />
+              Description
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            About<br />
-            Us
-          </h3>
+          <a href="AboutUsPage.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              About<br />
+              Us
+            </h3></a
+          >
         </div>
       </div>
     </div>
@@ -56,13 +64,13 @@
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
-          <h3 class="bgBlue centerDiv borderSolid">Age Ranges</h3>
+          <h3 class="bgBlue centerDiv borderSolid">Hours Worked</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
-          <canvas class="chart borderSolid" id="genderChart"></canvas>
+          <canvas class="chart borderSolid" id="hourChartL"></canvas>
         </div>
       </div>
       <br />
@@ -73,13 +81,18 @@
            it's kinda massive also i ono -->
           <h2 class="homeH2">Description of the data</h2>
           <p class="centerDiv margin">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit , sed do
-            eiusmod tempor incididunt ut labore et dolore ma gna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercita tion ullamco laboris nisi ut
-            aliquip ex ea commodo conseq uat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepte ur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id es t laborum.
+            For the less than 10 hours category, 3.1% of male students and 4.3%
+            of female students report working in this range. In the 10-19 hours
+            range, 9.1% of males and 10.6% of females work, indicating a
+            slightly higher proportion of females in this category. When it
+            comes to the 20-34 hours range, both genders show similar figures,
+            with 16.6% of male students and 16.3% of female students working
+            these hours. . <br />
+            <br />This data is important because it gives students a visual idea
+            of how many hours other students are working realistically while
+            still attending school. While looking at this data they can start
+            planning their own work/school schedule hours based on others
+            experience.
           </p>
         </div>
       </div>
@@ -95,6 +108,6 @@
       </div>
     </div>
 
-    <script src="GenderGraph.js"></script>
+    <script src="HoursWorked.js"></script>
   </body>
 </html>
