--- a/Z I101/Website/I-101Race.html
+++ b/Z I101/Website/I-101Race.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>HomePage</title>
+    <title>Ethnicities</title>
     <link
       id="video"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -25,28 +25,36 @@
     <div class="container">
       <div class="row borderSolid" id="navBox">
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Home<br />
-            Page
-          </h3>
+          <a href="index.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Home<br />
+              Page
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Data<br />
-            Visualization
-          </h3>
+          <a href="I-101DataVis.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Data<br />
+              Visualization
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Data<br />
-            Description
-          </h3>
+          <a href="I-101DataDescription.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Data<br />
+              Description
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            About<br />
-            Us
-          </h3>
+          <a href="AboutUsPage.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              About<br />
+              Us
+            </h3></a
+          >
         </div>
       </div>
     </div>
@@ -62,7 +70,7 @@
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
-          <canvas class="chart borderSolid" id="raceChart"></canvas>
+          <canvas class="chart borderSolid" id="raceChartR"></canvas>
         </div>
       </div>
       <br />
@@ -73,13 +81,17 @@
            it's kinda massive also i ono -->
           <h2 class="homeH2">Description of the data</h2>
           <p class="centerDiv margin">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit , sed do
-            eiusmod tempor incididunt ut labore et dolore ma gna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercita tion ullamco laboris nisi ut
-            aliquip ex ea commodo conseq uat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepte ur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id es t laborum.
+            This bar chart displays the population distribution of students by
+            race, illustrating the percentage of students in four racial
+            categories: White, Black, Hispanic, and Asian. White students make
+            up the largest proportion of the student population, at 44.1%,
+            followed by Hispanic students, who account for 39.0%. The percentage
+            of Black students is 36.6%, while Asian students represent 31.1% of
+            the population. <br /><br />This is important for future students
+            who are curious about the race population as well as representation
+            in their respected population. Hopefully this shows that no matter
+            the race, anyone can study and work. Hopefully, this encourages them
+            to register for that class or apply for a job if unsure.
           </p>
         </div>
       </div>
