--- a/Z I101/Website/I-10AgeRange.html
+++ b/Z I101/Website/I-10AgeRange.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>HomePage</title>
+    <title>Age Range</title>
     <link
       id="video"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -25,28 +25,36 @@
     <div class="container">
       <div class="row borderSolid" id="navBox">
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Home<br />
-            Page
-          </h3>
+          <a href="index.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Home<br />
+              Page
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Data<br />
-            Visualization
-          </h3>
+          <a href="I-101DataVis.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Data<br />
+              Visualization
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Data<br />
-            Description
-          </h3>
+          <a href="I-101DataDescription.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Data<br />
+              Description
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            About<br />
-            Us
-          </h3>
+          <a href="AboutUsPage.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              About<br />
+              Us
+            </h3></a
+          >
         </div>
       </div>
     </div>
@@ -62,7 +70,7 @@
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
-          <canvas class="chart borderSolid" id="myChart"></canvas>
+          <canvas class="chart borderSolid" id="ageChartL"></canvas>
         </div>
       </div>
       <br />
@@ -73,13 +81,18 @@
            it's kinda massive also i ono -->
           <h2 class="homeH2">Description of the data</h2>
           <p class="centerDiv margin">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit , sed do
-            eiusmod tempor incididunt ut labore et dolore ma gna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercita tion ullamco laboris nisi ut
-            aliquip ex ea commodo conseq uat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepte ur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id es t laborum.
+            This bar chart illustrates the percentage of students employed
+            across different age ranges. The data shows that 39.9% of students
+            in the 16-24 age group are employed, the lowest of the four groups.
+            In the 30-39 age group, 45.4% of students are employed, which is
+            slightly lower than the 25-29 group but still a significant
+            proportion. The 40-49 age group has an employment rate of 43.6%.
+            <br />
+            <br />This is important because it shows our website users that as
+            they become older and try to go back to school it’s very common for
+            them to have to work, so they will feel a little better about trying
+            to go back to school and work on top of that knowing that there are
+            a good amount of college students doing the same.
           </p>
         </div>
       </div>
