--- a/Z I101/Website/index.html
+++ b/Z I101/Website/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Hours Worked</title>
+    <title>Homepage</title>
     <link
       id="video"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -10,7 +10,6 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="I-101Website.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -63,36 +62,51 @@
     <div class="container">
       <div class="row">
         <div class="col-2"></div>
-        <div class="col-8">
-          <h3 class="bgBlue centerDiv borderSolid">Hours Worked</h3>
+        <div class="col-4">
+          <img class="Image" src="group1.png" alt="Placeholder image" />
+        </div>
+        <div class="col-4">
+          <img class="Image" src="group2.jpg" alt="Placeholder image" />
         </div>
       </div>
+      <hr />
       <div class="row">
         <div class="col-2"></div>
-        <div class="col-8">
-          <canvas class="chart borderSolid" id="hourChartL"></canvas>
+        <div class="col-4">
+          <img class="Image" src="Group3.jpg" alt="Placeholder image" />
         </div>
+        <div class="col-4">
+          <img class="Image" src="parent.png" alt="Placeholder image" />
+        </div>
+        <br />
       </div>
-      <br />
+    </div>
+    <br />
+    <div class="container borderSolid bgWhite">
       <div class="row">
-        <div class="col-1"></div>
-        <div class="col-10 borderSolid">
-          <!-- More detailed description of the chart's contents
-           it's kinda massive also i ono -->
-          <h2 class="homeH2">Description of the data</h2>
-          <p class="centerDiv margin">
-            For the less than 10 hours category, 3.1% of male students and 4.3%
-            of female students report working in this range. In the 10-19 hours
-            range, 9.1% of males and 10.6% of females work, indicating a
-            slightly higher proportion of females in this category. When it
-            comes to the 20-34 hours range, both genders show similar figures,
-            with 16.6% of male students and 16.3% of female students working
-            these hours. . <br />
-            <br />This data is important because it gives students a visual idea
-            of how many hours other students are working realistically while
-            still attending school. While looking at this data they can start
-            planning their own work/school schedule hours based on others
-            experience.
+        <div class="col">
+          <h2 class="homeH2">Description of Data set</h2>
+          <p>
+            Our dataset covers College Student Employment from the perspective
+            of Race, Age, and the amount of time per week that students work. We
+            want to cover this dataset because our school of IUI is known as a
+            place for working students, which is reflected with many of our
+            group members. We hope that this website reassures people who are on
+            the fence about returning to their higher education by showing them
+            that there are many who are going to college across the nation who
+            are in the same boat as them.
+          </p>
+          <h2 class="homeH2">Data Source</h2>
+          <p>
+            Our dataset was sourced from the
+            <a href="https://nces.ed.gov/programs/coe/indicator/ssa"
+              >National Center for Educational Statistics (NCES)</a
+            >. The NCES creates annual reports to gauge the Condition of
+            Education. This is done to provide data on a national level, as well
+            as by researchers, the media, and the general public. <br />
+            <br />
+            We used a library called Chart.js to help us create our charts, and
+            present our data in a more visually pleasing way.
           </p>
         </div>
       </div>
@@ -107,7 +121,5 @@
         </div>
       </div>
     </div>
-
-    <script src="HoursWorked.js"></script>
   </body>
 </html>
