--- a/Z I101/index.html
+++ b/Z I101/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Data Description 2</title>
+    <title>Homepage</title>
     <link
       id="video"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row borderSolid" id="navBox">
         <div class="col">
-          <a href="I-101Homepage.html">
+          <a href="index.html">
             <h3 class="navButton bgBlue borderSolid textBlack">
               Home<br />
               Page
@@ -87,17 +87,26 @@
         <div class="col">
           <h2 class="homeH2">Description of Data set</h2>
           <p>
-            For our datasets it shows different graphs and for college student
-            employment. Some show and have backgrounds behind age, gender and
-            race.
+            Our dataset covers College Student Employment from the perspective
+            of Race, Age, and the amount of time per week that students work. We
+            want to cover this dataset because our school of IUI is known as a
+            place for working students, which is reflected with many of our
+            group members. We hope that this website reassures people who are on
+            the fence about returning to their higher education by showing them
+            that there are many who are going to college across the nation who
+            are in the same boat as them.
           </p>
           <h2 class="homeH2">Data Source</h2>
           <p>
-            Our data sources were from
+            Our dataset was sourced from the
             <a href="https://nces.ed.gov/programs/coe/indicator/ssa"
-              >COE - College Student Employment</a
-            >
-            for the many different sets and charts needed for our webpage!
+              >National Center for Educational Statistics (NCES)</a
+            >. The NCES creates annual reports to gauge the Condition of
+            Education. This is done to provide data on a national level, as well
+            as by researchers, the media, and the general public. <br />
+            <br />
+            We used a library called Chart.js to help us create our charts, and
+            present our data in a more visually pleasing way.
           </p>
         </div>
       </div>
