--- a/Z I101/I-10AgeRange.html
+++ b/Z I101/I-10AgeRange.html
@@ -103,7 +103,7 @@
     <div class="container">
       <div class="row">
         <div class="col bgBlue borderSolid" id="footer">
-          <h5>Contact Us!</h5>
+          <h5><a href="mailto:nguyenjq@iu.edu">Contact Us!</a></h5>
         </div>
       </div>
     </div>
