--- a/Z I101/Website/AboutUsPage.html
+++ b/Z I101/Website/AboutUsPage.html
@@ -153,7 +153,7 @@
     <div class="container">
       <div class="row">
         <div class="col bgBlue borderSolid" id="footer">
-          <h5 class="centertext">Contact Us!</h5>
+          <h5><a href="mailto:nguyenjq@iu.edu">Contact Us!</a></h5>
         </div>
       </div>
     </div>
