--- a/Z I101/Website/I-101DataVis.html
+++ b/Z I101/Website/I-101DataVis.html
@@ -62,6 +62,7 @@
     <!-- Header Above -->
     <div class="container">
       <div class="row">
+        <h2 class="centerDiv">Compare datasets using the options below!</h2>
         <div class="col-1"></div>
         <div class="col-4">
           <h3 class="borderSolid bgBlue centerDiv" id="chartL">Hours Worked</h3>
