--- a/Z I101/Website/I-10AgeRange.html
+++ b/Z I101/Website/I-10AgeRange.html
@@ -62,9 +62,18 @@
     <!-- Header Above -->
     <div class="container">
       <div class="row">
-        <div class="col-2"></div>
+        <div class="col-2">
+          <a href="I-101HoursWorked.html">
+            <h5 class="bgBlue centerDiv borderSolid"><< Hours Worked</h5></a
+          >
+        </div>
         <div class="col-8">
           <h3 class="bgBlue centerDiv borderSolid">Age Ranges</h3>
+        </div>
+        <div class="col-2">
+          <a href="I-101Race.html">
+            <h5 class="bgBlue centerDiv borderSolid">Ethnicities >></h5></a
+          >
         </div>
       </div>
       <div class="row">
